--- a/addons/sourcemod/configs/trails-colors.cfg
+++ b/addons/sourcemod/configs/trails-colors.cfg
@@ -20,10 +20,19 @@
 
 	"2"
 	{
-		"name"		"{empty}"		// Use "{empty}" in "name" to add an empty line in the menu.
+		"name"		"Velocity"
+
+		"special"	"3"
+
+		"alpha"		"128"
 	}
 
 	"3"
+	{
+		"name"		"{empty}"		// Use "{empty}" in "name" to add an empty line in the menu.
+	}
+
+	"4"
 	{
 		"name"		"Red"
 
@@ -34,7 +43,7 @@
 		"alpha"		"128"
 	}
 
-	"4"
+	"5"
 	{
 		"name"		"Yellow"
 
@@ -45,7 +54,7 @@
 		"alpha"		"128"
 	}
 
-	"5"
+	"6"
 	{
 		"name"		"Green"
 
@@ -56,7 +65,7 @@
 		"alpha"		"128"
 	}
 
-	"6"
+	"7"
 	{
 		"name"		"Cyan"
 
@@ -67,7 +76,7 @@
 		"alpha"		"128"
 	}
 
-	"7"
+	"8"
 	{
 		"name"		"Blue"
 
@@ -78,7 +87,7 @@
 		"alpha"		"128"
 	}
 
-	"8"
+	"9"
 	{
 		"name"		"Magenta"
 
